--- a/RelatorioFinal240.rmd
+++ b/RelatorioFinal240.rmd
@@ -301,9 +301,7 @@ public.periodico.df %>%
 ```
 
 Sob uma perspectiva de publicações em periódicos, o Programa de Pós-Graduação
-de Biologia Animal apresentou uma queda considerável de 2014 para 2015,
-diminuindo o número de publicações em cerca de 18% mas recuperando em anos
-posteriores
+de Biologia Animal mantém se estável com flutuações normais, mas apresentou uma queda considerável de 2014 para 2015, diminuindo o número de publicações em cerca de 18% mas recuperando em anos posteriores.
 
 Quantidade de periodicos publicados por professor(a) entre 2010 e 2017 - by Jonas
 ```{r}
@@ -317,12 +315,7 @@ perfil.df %>%
   theme(axis.text.x=element_blank(), axis.ticks.x=element_blank()) +
   geom_hline(yintercept = sum(perfil.df %>% summarize(x = median(PERIODICO))), color = "red")
 ```
-Investigando o comportamento dos pesquisadores do programa, os professores
-foram ordenado pelo número total de publicações em periódicos entre 2010 e 2017, 
-cuja mediana foi apresentada pela linha vermelha do gráfico acima, que sinaliza
-11 publicações no período total. O gráfico indica que, dos 23 pesquisadores
-inclusos na base de dados, cinco se destacaram com publicações que mais que
-duplicaram este valor - com um deles chegando a 52 publicações em periódicos.
+O gráfico acima demonstra o total de publicações para cada pesquisador, demonstrando relativa homogeneidade entre a quantidade de pesquisadores em média, porém há aqueles que deslocam a média para cima por estarem fora do desvio padrão acima ou abaixo, sendo que há destaque para dois pesquisadores que tem um número de publicação que corresponde cerca de quatro vezes o valor da média.
 
 #publicacao de livros por pais/ano
 ```{r}
@@ -332,9 +325,7 @@ public.livros.df %>%
   ggtitle("Livros publicados por ano") +
   xlab("Ano") + ylab("Pais") + geom_point() + geom_jitter()
 ```
-Apenas cinco anos apresentaram registros de publicação de livros por parte
-do Programa no período de 2010 a 2017. Além disso, é possível notar uma grande
-concentração destas publicações em território nacional.
+Denota-se homogeneidade na distribuição de livros publicados para cada país de publicação, onde os estados unidos se equiparam ao Brasil quanto a número de lívros publicados para o PPG em Biologia Animal
 
 #Eventos nacionais e internacionais
 ```{r}
